--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@ant-design/icons": "^4.3.0",
     "antd": "^4.8.6",
     "node-sass": "4.14.1",
     "react": "^17.0.1",
